# RaspPi_spotwave

./: README.md  analyzer.py  gui.py  main.py  one_sensor.py  pyproject.toml  requirements.txt  sensor.py  sensor_original.py
config/: config.toml
csv_data/: metadata.json  waveform_0.csv  waveform_1.csv  waveform_2.csv  waveform_3.csv  waveform_4.csv
measurement/: metadata.json  records.csv
src/rasppi_spotwave/: __init__.py
tests/: first_test.py  get_analyzer_test.py  get_config_test.py  post_config_test.py  post_measurement_test.py  post_one_measurement_test.py  simple_test.py
