[project]
name = "rasppi-spotwave"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[all]>=0.116.1",
    "uvicorn>=0.35.0",
    "numpy>=1.24.0",
    "tomli>=2.0.1",
    "tomlkit>=0.13.0",
    "pydantic>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.12.3",
    "pytest>=8.0",
    "pytest-asyncio>=1.1",
]
